docs(profiling): replace three expectations with measurements
The profiling docs carried three claims derived from what
async-profiler requires rather than from running it. All three were
measured, and two were wrong.

MEASURED ON A REAL DEPLOYMENT. edge-01, Ubuntu 24.04, x86_64, glibc
2.39, perf_event_paranoid=4, running the shipped unit file: User=riptide,
NoNewPrivileges=yes, ProtectSystem=strict, PrivateTmp=yes, no
capabilities. Probes were run under systemd-run with those same
directives rather than against the live process.

WRONG: "cpu is the one that can be refused". Both itimer and cpu started
and produced correctly attributed samples -- around 800 samples over 8
seconds with 99.9% on the intended method. The docs now say so. What is
still unverified, and now stated as such, is which mechanism cpu used:
the sample output cannot distinguish a successful perf_event_open from a
silent internal degrade.

WRONG: "whether they profile correctly on musl is untested". Measured on
eclipse-temurin:25-alpine amd64: 801 samples, 99.88% on the intended
method, against 99.75% on a glibc image doing identical work. Stack
unwinding was the suspected musl failure and it does not appear. The
limit is stated: a tight synthetic loop is the easiest case an unwinder
sees, and riptide's real hot paths are Netty loops, virtual threads and
JIT-compiled code, so this shows the profiler is not broken rather than
that every profile is accurate.

NEW, and it is a future-compat risk rather than a correction. With
profiling on, JDK 25 warns that System::load is a restricted method and
that restricted methods will be blocked in a future release unless
native access is enabled. Profiling works today and will stop working on
a JDK that enforces it. Documented with the
--enable-native-access=ALL-UNNAMED remedy. The warning appears only when
profiling is enabled, because nothing else here loads a native library.

Also verified end to end, which nothing in the original change did:
riptide 0.12